# i2loc-manager

./: .gitignore  LICENSE  README.md  i2loc_manager.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: languages.json
assets/l10n/en-US/: main.ftl
assets/l10n/uk-UA/: main.ftl
gui/: about_dialog.py  custom_table.py  export_module.py  helpers.py  import_module.py  langs_manage.py  main_window.py  updater.py
utils/: app_config.py  app_locales.py  enums.py  exceptions.py  helpers.py  manager.py
