[project]
name = "i2loc-manager"
version = "1.1.5"
description = "A lightweight tool for managing I2 Localization assets exported via UABEA as dump files with ease."
requires-python = ">=3.12"
dependencies = [
    "fluent>=0.10.0",
    "fluent.syntax>=0.19.0",
    "fluent.runtime>=0.4.0",
    "fluent-logger-pyramid>=0.0.3",
    "PySide6>=6.8",
    "nuitka>=2.8.4",
    "requests>=2.31.0",
    "cx-freeze>=8.6.0",
]
